codi to ds 0.5 migration

--- a/src/main/webapp/pages/about.xhtml
+++ b/src/main/webapp/pages/about.xhtml
@@ -23,10 +23,9 @@
 
 <html>
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-   xmlns:ui="http://java.sun.com/jsf/facelets"
-   xmlns:h="http://java.sun.com/jsf/html"
-   xmlns:f="http://java.sun.com/jsf/core"
-   template="/layout/main-template.xhtml">
+                xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:h="http://java.sun.com/jsf/html"
+                template="/layout/main-template.xhtml">
 
     <ui:define name="content">
         <h:panelGrid columns="2">
@@ -39,8 +38,8 @@
             <h:outputLabel value="Apache OpenWebBeans:" for="cdiVersion"/>
             <h:outputText id="cdiVersion" value="#{infoBean.cdiVersion}"/>
 
-            <h:outputLabel value="Apache MyFaces CODI:" for="codiVersion"/>
-            <h:outputText id="codiVersion" value="#{infoBean.codiVersion}"/>
+            <h:outputLabel value="Apache DeltaSpike:" for="dsVersion"/>
+            <h:outputText id="dsVersion" value="#{infoBean.deltaSpikeVersion}"/>
 
             <h:outputLabel value="Apache MyFaces ExtVal:" for="extValVersion"/>
             <h:outputText id="extValVersion" value="#{infoBean.extValVersion}"/>
