--- a/src/main/webapp/pages/index.xhtml
+++ b/src/main/webapp/pages/index.xhtml
@@ -23,14 +23,12 @@
 
 <html>
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-   xmlns:ui="http://java.sun.com/jsf/facelets"
-   xmlns:h="http://java.sun.com/jsf/html"
-   xmlns:f="http://java.sun.com/jsf/core"
-   template="/layout/main-template.xhtml">
+                xmlns:ui="http://java.sun.com/jsf/facelets"
+                template="/layout/main-template.xhtml">
 
     <ui:define name="content">
         <h2>Illustrated Features</h2>
-        <h3>Apache MyFaces CODI</h3>
+        <h3>Apache DS/CODI</h3>
         <ul>
             <li>Type-safe view-config</li>
             <li>Type-safe (custom) view-meta-data</li>
